--- a/Hearts R.Rmd
+++ b/Hearts R.Rmd
@@ -7,10 +7,11 @@ output: html_notebook
 ```{r}
 GibbsSampler <- function(nchain, data, init, prop_sd){
   ## Voir les transparents du super cours
-  X <- data$X
-  Y <- data$Y
+  X <- data$x
+  Y <- data$y
   t <- data$t
   cured <-Y==0
+  std <- 10**2
   
     
   alpha <- init[1]
@@ -25,14 +26,14 @@ GibbsSampler <- function(nchain, data, init, prop_sd){
     ## Mise a jour de Alpha et Beta
     prop <- rnorm(1, alpha, prop_sd[1])
     
-    p <- exp(alpha)/(1+exp(alpha))
-    p_prop <- exp(prop)/(1+exp(prop))
+    p <- exp(alpha - log(1+exp(alpha)))
+    p_prop <- exp(prop - log(1+exp(prop)))
     
     top <- sum(log(theta+(1-theta)*(1-p_prop)*t) *cured +
-      (1 - cured) * (Y*log(p_prop)+X*log(1-p_prop)))- (prop**2)/(2*(prop_sd[1]**2))
+      (1 - cured) * (Y*log(p_prop)+X*log(1-p_prop)))- (prop**2)/(2*(std**2))
     
     bottom <- sum(log(theta+(1-theta)*(1-p)*t) *cured + 
-      (1 - cured) * (Y*log(p)+X*log(1-p)))- (alpha**2)/(2*(prop_sd[1]**2))
+      (1 - cured) * (Y*log(p)+X*log(1-p)))- (alpha**2)/(2*(std**2))
     
     acc_prob <- exp(top - bottom)
     
@@ -42,26 +43,26 @@ GibbsSampler <- function(nchain, data, init, prop_sd){
       beta <- exp(alpha)
     }
     
-    
-    ## Mise a jour de Delta et Gamma 
+  
+    ## Mise a jour de Delta et theta 
     prop <- rnorm(1, delta, prop_sd[2])
     
     
     
-    theta <- exp(delta)/(1+exp(delta))
-    theta_prop <- exp(prop)/(1+exp(prop))
+    theta <- exp(delta - log(1+exp(delta)))
+    theta_prop <- exp(prop - log(1+exp(prop)))
     
     top <- sum(log(theta_prop+(1-theta_prop)*(1-p)*t) *cured +
-      (1 - cured) * log(1-theta_prop))- (prop**2)/(2*(prop_sd[2]**2))
+      (1 - cured) * log(1-theta_prop))- (prop**2)/(2*(std**2))
     
     bottom <- sum(log(theta+(1-theta)*(1-p)*t) *cured + 
-      (1 - cured) * log(1-theta))- (delta**2)/(2*(prop_sd[2]**2))
+      (1 - cured) * log(1-theta))- (delta**2)/(2*(std**2))
     
     acc_prob <- exp(top - bottom)
     
     if (runif(1) < acc_prob){
       delta <- prop
-      theta <- exp(delta)/(1+exp(delta))
+      theta <- theta_prop
     }
     
     
@@ -84,16 +85,21 @@ t <- c(11, 11, 17, 22, 9, 6, 5, 14, 9, 7, 22, 51)
 x <- c(6, 9, 17, 22, 7, 5, 5, 14, 9, 7, 9, 51)
 y <-c(5, 2, 0, 0, 2, 1, 0, 0, 0, 0, 13, 0)
 data <- data.frame(x, y, t)
+data
 ```
 
 Utilisation de l'échantillonneur :
 ```{r}
-sample <- GibbsSampler(10**4, data, c(1, 1), c(10**4, 10**4))
+sample <- GibbsSampler(10**4, data, c(0, 0), c(0.1 , 1))
 
-burning <- 1:500
-alpha <- sample[1]
-summary(sample)
+burning <- 1:1000
+summary(sample[-burning,])
 ```
+
+```{r}
+plot(sample[-burning, 1])
+```
+
 
 
 
