--- a/Python version/main.ipynb
+++ b/Python version/main.ipynb
@@ -11,6 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Auteurs:\n",
+    "- Karim CHAKROUN\n",
+    "- Maxime GOURCEYRAUD\n",
+    "- Charles MIRANDA\n",
+    "- Vincent SEVESTRE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Importation des données"
    ]
   },
@@ -41,8 +52,8 @@
    "source": [
     "Le jeu de données correspond à l'effet d'un médicament utilisé pour traiter des patients souffrant de fréquentes contractions ventriculaires prématurées (CVP) du coeur.\n",
     "\n",
-    "- $x_i$ est le nombre de PVC par minute avant la prise du médicament\n",
-    "- $y_i$ est le nombre de PVC par minute après la prise du médicament\n",
+    "- $x_i$ est le nombre de CVP par minute avant la prise du médicament\n",
+    "- $y_i$ est le nombre de CVP par minute après la prise du médicament\n",
     "- $t_i=x_i+y_i$"
    ]
   },
@@ -192,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Farewell et Sprott ont modélisé ces données en 1988 comme un mélange de distributions de Poisson dans lequel certains patients sont \"guéris\" par le médicament, tandis que d'autres présentent des niveaux variables de réponse mais restent anormaux. Une valeur nulle après la prise du médicament peut indiquer une \"guérison\", ou peut représenter un zéro d'échantillonnage d'un patient avec un PVC anormal. Le modèle suivant est donc supposé\n",
+    "Farewell et Sprott ont modélisé ces données en 1988 comme un mélange de distributions de Poisson dans lequel certains patients sont \"guéris\" par le médicament, tandis que d'autres présentent des niveaux variables de réponse mais restent anormaux. Une valeur nulle après la prise du médicament peut indiquer une \"guérison\", ou peut représenter un zéro d'échantillonnage d'un patient avec un CVP anormal. Le modèle suivant est donc supposé\n",
     "$$\n",
     "x_i \\sim \\mathcal P(\\lambda_i) ~ ,\\text{pour tous les patients} \\\\\n",
     "y_i \\sim \\mathcal P(\\beta \\lambda_i) ~ ,\\text{pour tous les patients }\\textit{non soignés} \\\\\n",
@@ -399,22 +410,6 @@
    ],
    "source": [
     "fig = plt.figure(figsize=(10, 10))\n",
-    "\"\"\"\n",
-    "# alpha\n",
-    "ax[0,0].plot(alpha)\n",
-    "ax[0,0].set_title(\"Alpha\")\n",
-    "\n",
-    "# beta\n",
-    "ax[0,1].plot(beta)\n",
-    "ax[0,1].set_title(\"Beta\")\n",
-    "\n",
-    "# delta\n",
-    "ax[1,0].plot(delta)\n",
-    "ax[1,0].set_title(\"Delta\")\n",
-    "\n",
-    "# theta\n",
-    "ax[1,1].plot(theta)\n",
-    "ax[1,1].set_title(\"Theta\")\"\"\"\n",
     "\n",
     "for i, coeff in enumerate(coefficients):\n",
     "    ax = fig.add_subplot(2, 2, 1 + i)\n",
