--- a/report/references.bib
+++ b/report/references.bib
@@ -1,5 +1,44 @@
 @article{winbugs_hearts,
     title = {Hearts: a mixture model for count data},
-    note = {\url{https://www.mrc-bsu.cam.ac.uk/wp-content/uploads/WinBUGS_Vol2.pdf}},
+    url = {https://www.mrc-bsu.cam.ac.uk/wp-content/uploads/WinBUGS_Vol2.pdf},
     pages = {14-15}
+}
+
+@article{Berry1987,
+  doi = {10.2307/2531826},
+  url = {https://doi.org/10.2307/2531826},
+  year = {1987},
+  month = jun,
+  publisher = {{JSTOR}},
+  volume = {43},
+  number = {2},
+  pages = {439},
+  author = {Donald A. Berry},
+  title = {Logarithmic Transformations in {ANOVA}},
+  journal = {Biometrics}
+}
+
+@article{Farewell1988,
+  doi = {10.2307/2531746},
+  url = {https://doi.org/10.2307/2531746},
+  year = {1988},
+  month = dec,
+  publisher = {{JSTOR}},
+  volume = {44},
+  number = {4},
+  pages = {1191},
+  author = {V. T. Farewell and D. A. Sprott},
+  title = {The Use of a Mixture Model in the Analysis of Count Data},
+  journal = {Biometrics}
+}
+
+@article{Cox1979,
+  doi = {10.1201/b14832},
+  url = {https://doi.org/10.1201/b14832},
+  year = {1979},
+  month = sep,
+  publisher = {Chapman and Hall/{CRC}},
+  author = {D.R. Cox and D.V. Hinkley},
+  title = {Theoretical Statistics},
+  pages = {136}
 }
