--- a/report/output.tex
+++ b/report/output.tex
@@ -1,11 +1,16 @@
-\begin{tabular}{lrrrr}
- & alpha & beta & delta & theta \\
-count & 9001.000000 & 9001.000000 & 9001.000000 & 9001.000000 \\
-mean & -0.440262 & 0.668435 & 0.315885 & 0.572062 \\
-std & 0.272396 & 0.188216 & 0.608252 & 0.137296 \\
-min & -1.252164 & 0.285885 & -1.909157 & 0.129076 \\
-2.5% & -0.975509 & 0.377000 & -0.874970 & 0.294221 \\
-50% & -0.447940 & 0.638943 & 0.305319 & 0.575742 \\
-97.5% & 0.102329 & 1.107748 & 1.558110 & 0.826082 \\
-max & 0.443986 & 1.558908 & 2.483371 & 0.922968 \\
-\end{tabular}
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{|c|c|c|c|c|}
+    \hline
+           & alpha    & beta    & delta    & theta   \\ \hline
+    mean   & -4.57e-1 & 6.54e-1 & 2.93e-1  & 5.67e-1 \\ \hline
+    std    & 2.59e-1  & 1.70e-1 & 6.24e-1  & 1.41e-1 \\ \hline
+    min    & -1.37e+0 & 2.54e-1 & -2.28e+0 & 9.28e-2 \\ \hline
+    2.5\%  & -9.83e-1 & 3.74e-1 & -8.82e-1 & 2.93e-1 \\ \hline
+    50\%   & -4.59e-1 & 6.32e-1 & 2.97e-1  & 5.74e-1 \\ \hline
+    97.5\% & 2.76e-2  & 1.03e+0 & 1.53e+0  & 8.22e-1 \\ \hline
+    max    & 2.92e-1  & 1.34e+0 & 2.44e+0  & 9.20e-1 \\ \hline
+    \end{tabular}
+    \caption{Résultats pour $N=10000$, $\tilde\sigma \in \{0.05, 1\}$, $\alpha_0=\delta_0=0$ et $burnin = 1000$}
+    \label{tab:results}
+\end{table}
