--- a/report/sections/echantillonneur.tex
+++ b/report/sections/echantillonneur.tex
@@ -30,7 +30,7 @@ Par un calcul similaire à \eqref{eq:pdf_alpha} et \eqref{eq:log_pdf_alpha} on o
 
 \subsection{Algorithme}
 
-\'Etant donné que nous n'avons pas de lois explicites pour $\alpha | \mathbf y, \delta$ et $\delta | \mathbf y, \alpha$ nous allons employé l'algorithme \textit{Metropolis-within-Gibbs} \ref{alg:sampler}.
+\'Etant donné que nous n'avons pas de lois explicites pour $\alpha | \mathbf y, \delta$ et $\delta | \mathbf y, \alpha$ nous allons employer l'algorithme \textit{Metropolis-within-Gibbs} \ref{alg:sampler}.
 
 \begin{algorithm}[H]
     \caption{Metropolis-within-Gibbs}
