--- a/report/sections/modele.tex
+++ b/report/sections/modele.tex
@@ -1,6 +1,6 @@
 \section{Modèle}
 
-\textsc{Farewell} et \textsc{Sprott} propose en 1988 un modèle du jeu de données \cite{Farewell1988} qui est un modèle de mélange de distributions de Poisson dans lequel certains patients sont "guéris" par le médicament, tandis que d'autres présentent des niveaux variables de réponse mais restent anormaux.
+\textsc{Farewell} et \textsc{Sprott} proposent en 1988 un modèle du jeu de données \cite{Farewell1988} qui est un modèle de mélange de distributions de Poisson dans lequel certains patients sont "guéris" par le médicament, tandis que d'autres présentent des niveaux variables de réponse mais restent anormaux.
 Une valeur nulle après la prise du médicament peut indiquer une "guérison", ou peut représenter un zéro d'échantillonnage d'un patient avec un CVP normal.
 Le modèle suivant est donc proposé
 
