Add link to github repo in the LaTeX report

--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -8,4 +8,4 @@ Dans les données qui nous sont fournies nous avons uniquement
 \end{itemize}
 
 Un modèle a été proposé par \textsc{Farewell} et \textsc{Sprott} en 1988 \cite{Farewell1988}.
-Les sections suivantes présentent le modèle et la méthode employée afin d'obtenir numériquement les coefficients du modèle.
+Les sections suivantes présentent le modèle et la méthode employée afin d'obtenir numériquement les coefficients du modèle \footnote{\url{https://github.com/viviseve/bayes-project-2}}.
